Added link to share code

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
         Friday 80°
         <i class="fas fa-cloud-sun"></i>
       </h3>
+
+      <h4 class="shareCode">
+         See my code <a href="https://github.com/laneywoodcock/WeatherAppProject">here</a>
+      </h4>
+
       <script src="src/script.js"></script>
 </body>
 </html>
