Adapted Humidity and Wind Elements

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           </div>
   
           <div class="col-3">
-            <h3 id="humidity">Humidity</h3>
+            <h3 id="humidity"></h3>
   
-            <h3 id="wind">Wind</h3>
+            <h3>Wind : <span id="wind"></span> MPH</h3>
             <div class="col-3"></div>
           </div>
         </div>
