--- a/index.html
+++ b/index.html
@@ -37,10 +37,15 @@
           <div class="col-3">
             
             <h2>           
-                <i class="fas fa-cloud-sun"></i>
+                <img 
+                src="https://ssl.gstatic.com/onebox/weather/64/sunny.png" 
+                alt=""
+                id="icon"
+                width=75px"
+                >
               <span class="temperature" id="degrees">     </span>         
               
-            </h2>
+            </h2 class="h2">
             <br>
             <span class="units"> 
                 <a href="#" id="celsius-link">°C /</a>
