--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <br>
             <span class="units"> 
                 <a href="#" id="celsius-link">°C /</a>
-                <a href="#" id="fahrenheit-link">°F</a>
+                <a href="#" class="active" id="fahrenheit-link">°F</a>
               </span>
 
           </div>
