Added 12 hour forecast projection

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 6: GitHub publishing HW</title>
+    <title>Final Project</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css"
@@ -72,26 +72,13 @@
   
 
 
-      <h4>5 Day Forecast</h4>
-      <h3>
-        Monday 85°
-        <i class="fas fa-sun"></i>
-        <br />
-        Tuesday 75°
-        <i class="fas fa-cloud-sun"></i>
-        <br />
-        Wednesday 65°
-        <i class="fas fa-cloud"></i>
-        <br />
-        Thursday 60°
-        <i class="fas fa-cloud-showers-heavy"></i>
-        <br />
-        Friday 80°
-        <i class="fas fa-cloud-sun"></i>
-      </h3>
-
+      <h4>12 Hour Forecast</h4>
+    <div class="row weather-forecast" id="forecast">
+      
+    </div>
+<br>
       <h4 class="shareCode">
-         See my code <a href="https://github.com/laneywoodcock/WeatherAppProject">here</a>
+         <a href="https://github.com/laneywoodcock/WeatherAppProject">Open source code</a> by Laney Woodcock
       </h4>
 
       <script src="src/script.js"></script>
